# ray_tracing

./: CMakeLists.txt  README.md  a.out  build.sh  camera.cpp  camera.h  cylinder.cpp  exercises.cpp  light.cpp  light.h  main.cpp  object.h  old.cpp  plane.cpp  ray.h  sphere.cpp  vec3.cpp  vec3.h  world.cpp  world.h
include/: camera.h  cylinder.h  light.h  object.h  plane.h  ray.h  sphere.h  vec3.h  world.h
lib/: camera.cpp  cylinder.cpp  light.cpp  sphere.cpp  vec3.cpp  world.cpp
